# sinusoidal-gradient-descent

./: 00_core.ipynb  README.md  estimation.ipynb  pyproject.toml
estimator_config/: multi_fft_2.yaml  multi_fft_2_baseline.yaml  multi_fft_32.yaml  multi_fft_32_baseline.yaml  multi_fft_8.yaml  multi_fft_8_baseline.yaml  multi_mse_2.yaml  multi_mse_2_baseline.yaml  multi_mse_32.yaml  multi_mse_32_baseline.yaml  multi_mse_8.yaml  multi_mse_8_baseline.yaml  single.yaml
estimator_config/dataset/: multi_sinusoid.yaml  single_sinusoid.yaml
estimator_config/evaluation/: multi.yaml  single.yaml
estimator_config/loss/: fft_loss.yaml
estimator_config/param_sampler/: multi.yaml  single.yaml
sinusoidal_gradient_descent/: core.py  oscillators.py  test_oscillators.py
sinusoidal_gradient_descent/eval/: estimator.py  metrics.py
